welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: value vuBiscuit
if (vuBiscuit()==true) {
    ^Program:6: error: not found: value vuBiscuit
if (vuBiscuit()==false) {
    ^Program:6: error: type mismatch;
 found   : Unit
 required: Boolean
if (vuBiscuit()==false) {
^